tomcat --> jetty; war --> tar.gz